# ftgl

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  COPYING.MIT  HISTORY  HISTORY.txt  Makefile.am  NEWS  README.txt  TODO  TODO.txt  bootstrap  cleanup  configure.ac  license.txt  ppa_upload.sh
cmake/: FindFTGL.cmake  config.h
debian/: .copyright.swp  changelog  control  copyright  libftgl-dev.install  rules
demo/: FTGLDemo.c  FTGLDemo.cpp  FTGLMFontDemo.cpp  Makefile.am  README.txt  c-demo.c  simple.cpp  tb.c  trackball.c
docs/: FTGL.html  FTGL.txt  Makefile.am  README.txt  doxygen.cfg.in  faq.dox  ftgl.dox  ftgl_dox  projects_using_ftgl.txt  tutorial.dox
extras/layout/: FTICUFace.cpp  FTICUFace.h  FTLayoutFont.cpp  FTLayoutFont.h
include/: FTBBox.h  FTBitmapGlyph.h  FTBufferGlyph.h  FTCharToGlyphIndexMap.h  FTCharmap.h  FTContour.h  FTExtrdGlyph.h  FTFace.h  FTFont.h  FTGL.h  FTGLBitmapFont.h  FTGLBufferFont.h  FTGLExtrdFont.h  FTGLOutlineFont.h  FTGLPixmapFont.h  FTGLPolygonFont.h  FTGLTextureFont.h  FTGlyph.h  FTGlyphContainer.h  FTInternals.h  FTLayout.h  FTLibrary.h  FTList.h  FTOutlineGlyph.h  FTPixmapGlyph.h  FTPoint.h  FTPolyGlyph.h  FTSimpleLayout.h  FTSize.h  FTTextureGlyph.h  FTVector.h  FTVectoriser.h  ftgl.h
m4/: font.m4  gl.m4  glut.m4
mac/: README.txt  ftlib.prj
mac/FTGL.pbproj/: henry.pbxuser  project.pbxproj
mac/FTGL.xcode/: henry.mode1  henry.pbxuser
msvc/: Makefile.am  README.txt  config.h  demo.cpp  ftgl.sln  ftgl_demo.vcproj  ftgl_dll.vcproj  ftgl_static_lib.vcproj
msvc/vc71/: ftgl_dll.vcproj
msvc/vc8/: FTGLDemo.vcproj  ftgl.sln  ftgl_demo.sln  ftgl_demo.vcproj  ftgl_demo_2.vcproj  ftgl_dll.vcproj  ftgl_static.vcproj  trackball.vcproj  unit_tests.vcproj
msvc/vc9/: CDemo.vcproj  FTGLDemo.vcproj  SimpleDemo.vcproj  ftgl.sln  ftgl_dll.vcproj  ftgl_static.vcproj  trackball.vcproj
src/: CMakeLists.txt  FTBBox.cpp  FTBBox.h  FTBitmapGlyph.cpp  FTBitmapGlyph.h  FTBuffer.cpp  FTBufferGlyph.cpp  FTBufferGlyph.h  FTCharToGlyphIndexMap.h  FTCharmap.cpp  FTCharmap.h  FTContour.cpp  FTContour.h  FTExtrdGlyph.cpp  FTExtrdGlyph.h  FTFace.cpp  FTFace.h  FTFont.cpp  FTFontGlue.cpp  FTFontImpl.h  FTGLBitmapFont.cpp  FTGLBitmapFontImpl.h  FTGLBufferFont.cpp  FTGLBufferFontImpl.h  FTGLExtrdFont.cpp  FTGLExtrdFontImpl.h  FTGLOutlineFont.cpp  FTGLOutlineFontImpl.h  FTGLPixmapFont.cpp  FTGLPixmapFontImpl.h  FTGLPolygonFont.cpp  FTGLPolygonFontImpl.h  FTGLTextureFont.cpp  FTGLTextureFontImpl.h  FTGlue.cpp  FTGlyph.cpp  FTGlyph.h  FTGlyphContainer.cpp  FTGlyphContainer.h  FTGlyphGlue.cpp  (+28 more)
src/FTFont/: FTBitmapFont.cpp  FTBitmapFontImpl.h  FTBufferFont.cpp  FTBufferFontImpl.h  FTExtrudeFont.cpp  FTExtrudeFontImpl.h  FTFont.cpp  FTFontGlue.cpp  FTFontImpl.h  FTGLBitmapFont.cpp  FTGLBitmapFontImpl.h  FTGLExtrdFont.cpp  FTGLExtrdFontImpl.h  FTGLOutlineFont.cpp  FTGLOutlineFontImpl.h  FTGLPixmapFont.cpp  FTGLPixmapFontImpl.h  FTGLPolygonFont.cpp  FTGLPolygonFontImpl.h  FTGLTextureFont.cpp  FTGLTextureFontImpl.h  FTOutlineFont.cpp  FTOutlineFontImpl.h  FTPixmapFont.cpp  FTPixmapFontImpl.h  FTPolygonFont.cpp  FTPolygonFontImpl.h  FTTextureFont.cpp  FTTextureFontImpl.h
src/FTGL/: FTBBox.h  FTBitmapGlyph.h  FTBuffer.h  FTBufferGlyph.h  FTExtrdGlyph.h  FTFont.h  FTGLBitmapFont.h  FTGLExtrdFont.h  FTGLOutlineFont.h  FTGLPixmapFont.h  FTGLPolygonFont.h  FTGLTextureFont.h  FTGlyph.h  FTLayout.h  FTOutlineGlyph.h  FTPixmapGlyph.h  FTPoint.h  FTPolyGlyph.h  FTSimpleLayout.h  FTTextureGlyph.h  ftgl.h
src/FTGlyph/: FTBitmapGlyph.cpp  FTBitmapGlyphImpl.h  FTBufferGlyph.cpp  FTBufferGlyphImpl.h  FTExtrdGlyph.cpp  FTExtrdGlyph.h  FTExtrdGlyphImpl.h  FTExtrudeGlyph.cpp  FTGlyph.cpp  FTGlyph.h  FTGlyphGlue.cpp  FTGlyphImpl.h  FTOutlineGlyph.cpp  FTOutlineGlyphImpl.h  FTPixmapGlyph.cpp  FTPixmapGlyphImpl.h  FTPolyGlyph.cpp  FTPolyGlyphImpl.h  FTPolygonGlyph.cpp  FTTextureGlyph.cpp  FTTextureGlyph.h  FTTextureGlyphImpl.h
src/FTLayout/: FTLayout.cpp  FTLayoutGlue.cpp  FTLayoutImpl.h  FTSimpleLayout.cpp  FTSimpleLayoutImpl.h
test/: CMakeLists.txt  CTest.c  FTBBox-Test.cpp  FTBitmapFont-Test.cpp  FTBitmapGlyph-Test.cpp  FTBufferFont-Bitmap.cpp  FTCharmap-Test.cpp  FTContour-NaN.cpp  FTContour-Test.cpp  FTExtrdGlyph-Test.cpp  FTExtrudeFont-Test.cpp  FTFTCharToGlyphIndexMap-Test.cpp  FTFace-Test.cpp  FTFont-Test.cpp  FTGLBitmapFont-Test.cpp  FTGLExtrdFont-Test.cpp  FTGLExtrdFont.cpp-Test.cpp  FTGLOutlineFont-Test.cpp  FTGLPixmapFont-Test.cpp  FTGLPolygonFont-Test.cpp  FTGLTextureFont-Test.cpp  FTGlyph-Test.cpp  FTGlyphContainer-Test.cpp  FTLibrary-Test.cpp  FTList-Test.cpp  FTMesh-Test.cpp  FTOutlineFont-Test.cpp  FTOutlineFont-UnInVec.cpp  FTOutlineGlyph-Test.cpp  FTPixmapFont-Bitmap.cpp  FTPixmapFont-Test.cpp  FTPixmapGlyph-Test.cpp  FTPoint-Test.cpp  FTPolyGlyph-Test.cpp  FTPolygonFont-Test.cpp  FTPolygonFont-UnInVec.cpp  FTSize-Test.cpp  FTTesselation-Test.cpp  FTTextureFont-Bitmap.cpp  FTTextureFont-Test.cpp  (+15 more)
test/font_pack/: README.txt
unix/: Make.conf.in  Make.rules  README.txt  acinclude.m4  aclocal.m4  configure  configure.ac  ftgl.pc.in
unix/demo/: Makefile
unix/docs/: Makefile
unix/m4/: gl.m4  glut.m4
unix/src/: Makefile
win32_vcpp/: ftgl.dsw
win32_vcpp/ftgl_demo/: demo.cpp  ftgl_demo.dsp  ftgl_demo.vcproj  ftgl_demo_2.dsp  ftgl_demo_2.vcproj
win32_vcpp/ftgl_dll/: ftgl_dll.dsp  ftgl_dll.vcproj
win32_vcpp/ftgl_static_lib/: ftgl_static_lib.dsp  ftgl_static_lib.vcproj
win32_vcpp/unit_tests/: unit_tests.dsp  unit_tests.vcproj
