
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src test demo docs
DIST_SUBDIRS = $(SUBDIRS) msvc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = ftgl.pc

DISTCLEANFILES = ftgl.pc

EXTRA_DIST = \
	AUTHORS \
	BUGS \
	COPYING.LGPL \
	COPYING.MIT \
	INSTALL \
	NEWS \
	README \
	TODO \
	bootstrap \
	cleanup \
	configure.ac \
	ftgl.pc.in \
	$(NULL)

NULL =
