
EXTRA_DIST = \
    README.txt \
    config.h \
    demo.cpp \
    $(vc71_files) \
    $(vc8_files) \
    $(NULL)

vc71_files = \
    vc71/ftgl.sln \
    vc71/ftgl_dll.vcproj \
    $(NULL)

vc8_files = \
    vc8/README_WIN32.txt \
    vc8/ftgl_static.vcproj \
    vc8/ftgl_demo.vcproj \
    vc8/unit_tests.vcproj \
    vc8/ftgl.sln \
    vc8/ftgl_demo_2.vcproj \
    vc8/ftgl_demo.sln \
    vc8/ftgl_dll.vcproj \
    $(NULL)

NULL =
